fix tooltip overflow issue

--- a/style/styles.css
+++ b/style/styles.css
@@ -507,3 +507,11 @@ button {
   display: block;
   opacity: 1;
 }
+
+@media (max-width: 700px) {
+  .tooltip-content {
+  bottom: 80%;
+    max-width: 50vw;
+    font-size: 10px;
+  }
+}
